<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EBEA"
    android:id="@+id/activity_detail_neighbour"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.neighbour_list.ListDetailNeighbourActivity"
    tools:showIn="@layout/activity_list_detail_neighbour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingRight="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="2dp"

            app:cardCornerRadius="10dp"
            app:cardMaxElevation="2dp"
            tools:ignore="PrivateResource">

            <TextView
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20sp"
                android:paddingTop="20dp"
                android:text="@string/person_name"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_on_pink_24dp"
                android:drawablePadding="5dp"
                android:paddingStart="25sp"
                android:paddingTop="70dp"
                android:singleLine="true"
                android:text="@string/address"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />


            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone_pink_24dp"
                android:drawablePadding="5dp"
                android:paddingStart="25sp"
                android:paddingTop="120dp"
                android:singleLine="true"
                android:text="@string/phone"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />


            <TextView
                android:id="@+id/webLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_weblink_pink_24dp"
                android:drawablePadding="5dp"
                android:paddingStart="15sp"
                android:paddingTop="170dp"
                android:singleLine="true"
                android:text="@string/webLink"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="7dp"
            
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="2dp"
            tools:ignore="PrivateResource">

            <TextView
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/a_propose_moi"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/info_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingTop="60dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:text="@string/neighbour_information"
                tools:ignore="RtlSymmetry" />

        </android.support.v7.widget.CardView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>